--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "netmask": "1.0.6",
     "node-uuid": "1.4.7",
     "panopticon": "0.2.0",
+    "rimraf": "2.6.1",
     "rumplestiltskin": "0.1.0",
     "semver": "5.3.0",
     "source-map": "0.1.31",
@@ -75,7 +76,8 @@
     "tomes": "0.3.0",
     "wizcorp-deep-copy.js": "0.1.0",
     "wizcorp-timer.js": "0.2.0",
-    "ws": "1.1.1"
+    "ws": "1.1.1",
+    "xpipe": "1.0.5"
   },
   "optionalPeerDependencies": {
     "consul": "~0.29.0",
@@ -111,7 +113,6 @@
     "plato": "1.7.0",
     "power-assert": "1.4.2",
     "retire": "1.3.1",
-    "rimraf": "2.6.1",
     "sqlite3": "3.1.8",
     "typedoc": "0.7.0",
     "typedoc-plugin-sourcefile-url": "1.0.3",
