--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "rimraf": "2.6.1",
     "prettyjson": "1.2.1",
     "rumplestiltskin": "0.1.0",
+    "safe-timers": "1.0.1",
     "semver": "5.3.0",
     "source-map": "0.1.31",
     "tabalot": "0.8.0",
