JSON5 configuration format
Adding support for JSON5 as a configuration format.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "heapdump": "0.3.9",
     "http-close": "0.0.2",
     "js-yaml": "3.8.4",
+    "json5": "0.5.1",
     "jsonlint": "1.6.2",
     "localstash": "0.2.0",
     "memoizee": "0.4.4",
