--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "node-uuid": "1.4.7",
     "panopticon": "0.2.0",
     "rimraf": "2.6.1",
+    "prettyjson": "1.2.1",
     "rumplestiltskin": "0.1.0",
     "semver": "5.3.0",
     "source-map": "0.1.31",
