TypeScript template: update dependencies
Updated all dependencies, and unpinned them.

--- a/scripts/templates/typescript-project/package.json
+++ b/scripts/templates/typescript-project/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@types/node": "7.0.13",
     "mage": "%MAGE_PACKAGE_VERSION%",
-    "ts-node": "3.0.2",
-    "typescript": "2.2.2"
+    "ts-node": "^4.0.1",
+    "typescript": "^2.6.2"
   }
 }
